Update error template Add ignore file Replace INotifyPropertyChange with NotificationObject

--- a/View/DataErrorView.xaml
+++ b/View/DataErrorView.xaml
@@ -14,7 +14,10 @@
         <Style TargetType="TextBox">
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"/>
+                    <Setter Property="ToolTip" 
+                            Value="{
+                                Binding RelativeSource={x:Static RelativeSource.Self}, 
+                                Path=(Validation.Errors)[0].ErrorContent}"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
