--- a/View/DataErrorWithTemplate.xaml
+++ b/View/DataErrorWithTemplate.xaml
@@ -33,6 +33,14 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="ToolTip" 
+                            Value="{
+                                Binding RelativeSource={x:Static RelativeSource.Self}, 
+                                Path=(Validation.Errors)/ErrorContent}"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
         <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource errorTemplate}"/>
         <Style TargetType="{x:Type syncfusion:IntegerTextBox}" BasedOn="{StaticResource errorTemplate}"/>
@@ -93,20 +101,18 @@
                     Text="{Binding Path=CurrentErrorInfo, Mode=OneWay}" Background="#FFCCCCCC" Foreground="Red" 
                     TextWrapping="Wrap" IsReadOnly="True"/>
 
-        <Button Content="Submit" Foreground="Green" 
-                Grid.Column="2" Grid.Row="5"  Visibility="{Binding Path=CurrentErrorInfo, Converter={StaticResource EmptyStringConverter}}"
+        <Button Content="Submit"
+                Grid.Column="2" Grid.Row="5" 
+                Visibility="{Binding Path=CurrentErrorInfo, Converter={StaticResource EmptyStringConverter}}"
                 HorizontalContentAlignment="Center" Width="100" Height="25" 
                 Margin="15">
             <Button.Style>
                 <Style TargetType="Button">
                     <Setter Property="IsEnabled" Value="False"/>
                     <Style.Triggers>
-                        <MultiDataTrigger>
-                            <MultiDataTrigger.Conditions>
-                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=dob}" Value="False"/>
-                            </MultiDataTrigger.Conditions>
+                        <DataTrigger Binding="{Binding Error}" Value="{x:Null}">
                             <Setter Property="IsEnabled" Value="True"/>
-                        </MultiDataTrigger>
+                        </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </Button.Style>
