--- a/View/NotifyDataErrorView.xaml
+++ b/View/NotifyDataErrorView.xaml
@@ -11,13 +11,19 @@
         <local:NotifyDataErrorViewModel/>
     </UserControl.DataContext>
     <UserControl.Resources>
-        <Style TargetType="TextBox">
+        <Style x:Key="errorToolTip" TargetType="Control">
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"/>
+                    <Setter Property="ToolTip" 
+                            Value="{
+                                Binding RelativeSource={x:Static RelativeSource.Self}, 
+                                Path=(Validation.Errors)/ErrorContent}"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource errorToolTip}"/>
+        <Style TargetType="{x:Type syncfusion:IntegerTextBox}" BasedOn="{StaticResource errorToolTip}"/>
+        <Style TargetType="{x:Type syncfusion:SfMaskedEdit}" BasedOn="{StaticResource errorToolTip}"/>
     </UserControl.Resources>
     <Grid Name="Grid" HorizontalAlignment="Left" VerticalAlignment="Top" Width="Auto">
         <Grid.RowDefinitions>
@@ -72,7 +78,7 @@
                                 ValidatesOnNotifyDataErrors=True,
                                 UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Button Content="Submit" Command="{Binding Path=SaveCommand}"
+        <Button Content="Submit" 
                 Grid.Column="2" Grid.Row="5" 
                 HorizontalContentAlignment="Center" Width="100" Height="25" 
                 Margin="15">
@@ -80,12 +86,9 @@
                 <Style TargetType="Button">
                     <Setter Property="IsEnabled" Value="False"/>
                     <Style.Triggers>
-                        <MultiDataTrigger>
-                            <MultiDataTrigger.Conditions>
-                                <Condition Binding="{Binding Path=(Validation.HasError), ElementName=dob}" Value="False"/>
-                            </MultiDataTrigger.Conditions>
+                        <DataTrigger Binding="{Binding HasErrors}" Value="False">
                             <Setter Property="IsEnabled" Value="True"/>
-                        </MultiDataTrigger>
+                        </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </Button.Style>
