--- a/View/ValidationRuleView.xaml
+++ b/View/ValidationRuleView.xaml
@@ -11,13 +11,19 @@
         <local:ValidationRuleViewModel/>
     </UserControl.DataContext>
     <UserControl.Resources>
-        <Style TargetType="TextBox">
+        <Style x:Key="errorToolTip" TargetType="Control">
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"/>
+                    <Setter Property="ToolTip" 
+                            Value="{
+                                Binding RelativeSource={x:Static RelativeSource.Self}, 
+                                Path=(Validation.Errors)/ErrorContent}"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource errorToolTip}"/>
+        <Style TargetType="{x:Type syncfusion:IntegerTextBox}" BasedOn="{StaticResource errorToolTip}"/>
+        <Style TargetType="{x:Type syncfusion:SfMaskedEdit}" BasedOn="{StaticResource errorToolTip}"/>
     </UserControl.Resources>
     <Grid Name="Grid" HorizontalAlignment="Left" VerticalAlignment="Top" Width="Auto">
         <Grid.RowDefinitions>
@@ -59,8 +65,9 @@
             </TextBox.Text>
         </TextBox>
 
-        <syncfusion:IntegerTextBox x:Name="age" Height="Auto" Width="200" 
-                 Margin="5" Grid.Column="2" Grid.Row="2" >
+        <syncfusion:IntegerTextBox x:Name="age" 
+                                   Height="Auto" Width="200" 
+                                   Margin="5" Grid.Column="2" Grid.Row="2" >
             <syncfusion:IntegerTextBox.Value>
                 <Binding Path="Age" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
@@ -114,6 +121,5 @@
                 </Style>
             </Button.Style>
         </Button>
-
     </Grid>
 </UserControl>
