--- a/View/DataErrorWithTemplate.xaml
+++ b/View/DataErrorWithTemplate.xaml
@@ -12,8 +12,6 @@
     </UserControl.DataContext>
 
     <UserControl.Resources>
-        <local:StringToVisibilityConverter x:Key="StringConverter"/>
-        <local:EmptyStringToVisibilityConverter x:Key="EmptyStringConverter"/>
         <Style x:Key="errorTemplate" TargetType="{x:Type Control}">
             <Setter Property="Validation.ErrorTemplate">
                 <Setter.Value>
@@ -28,24 +26,16 @@
                                   Data="M0,0 L 1,0 1,1z"
                                   Margin="-10,0,0,0"
                                   Stretch="Fill"
+                                  ToolTip="{Binding Path=/ErrorContent}"
                                   Fill="Red"/>
                         </DockPanel>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Style.Triggers>
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip" 
-                            Value="{
-                                Binding RelativeSource={x:Static RelativeSource.Self}, 
-                                Path=(Validation.Errors)/ErrorContent}"/>
-                </Trigger>
-            </Style.Triggers>
         </Style>
         <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource errorTemplate}"/>
         <Style TargetType="{x:Type syncfusion:IntegerTextBox}" BasedOn="{StaticResource errorTemplate}"/>
         <Style TargetType="{x:Type syncfusion:SfMaskedEdit}" BasedOn="{StaticResource errorTemplate}"/>
-
     </UserControl.Resources>
     <Grid Name="Grid" HorizontalAlignment="Left" VerticalAlignment="Top" Width="Auto">
         <Grid.RowDefinitions>
@@ -95,15 +85,8 @@
                  Value="{Binding Email, Mode=TwoWay,NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged, 
                                 ValidatesOnDataErrors=True}"/>
 
-        <!-- Error Display -->
-        <TextBox  Grid.Column="2" Grid.Row="5"  Visibility="{Binding Path=CurrentErrorInfo, Converter={StaticResource StringConverter}}"
-                HorizontalContentAlignment="Center" Width="200" TextAlignment="Left"
-                    Text="{Binding Path=CurrentErrorInfo, Mode=OneWay}" Background="#FFCCCCCC" Foreground="Red" 
-                    TextWrapping="Wrap" IsReadOnly="True"/>
-
         <Button Content="Submit"
                 Grid.Column="2" Grid.Row="5" 
-                Visibility="{Binding Path=CurrentErrorInfo, Converter={StaticResource EmptyStringConverter}}"
                 HorizontalContentAlignment="Center" Width="100" Height="25" 
                 Margin="15">
             <Button.Style>
